test/spec_vectors/simd_i32x4_arith2/fail/module_19.wat
(module (func $i32x4.min_s-arg-empty (result v128) (i32x4.min_s)))